# nebuta-design-updated

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: AutoRemesher.h  NebutaManager.h  approximate_single_patch.h  decimate.cpp  decimate.h  developablize.cpp  developablize.h  developablize_quadric.cpp  developablize_quadric.h  flatten_triangle_strip.cpp  flatten_triangle_strip.h  gauss_image_thinning.h  main.cpp  mesh_field_smoother.h  mesh_quality.h  svg_writer.cpp  svg_writer.h  triangle_strips.cpp  triangle_strips.h
src/fields/: field_smoother.h
